tests/parser/expr_expected.expected
<string>:2:7: error: expected expression, not RParen
    ( )
      ^